# tiny

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sql  tiny.sample.conf
app/index/: README.md
app/index/article/: about.html  article.html  contact.html  en.lang  index.html  policy.html  sidebar.html  terms.html  travel.html  uk.lang
app/index/contact/: about.html  contact.html
app/index/main/: 404.html  breadcrumbs.html  en.lang  footer.html  header.html  index.html  navigation.html  ua.lang  uk.lang
app/index/terms/: privacy-policy.html  terms-conditions.html
tiny/: Cargo.toml
tiny/src/: help.rs  main.rs
tiny/src/app/index/: article.rs  index.rs  main.rs
tiny/src/sys/: app.rs  fastcgi.rs  go.rs  init.rs  log.rs
tiny/src/work/: action.rs  cache.rs  db.rs  html.rs  lang.rs  worker.rs
tinymod/: Cargo.toml
tinymod/src/: lib.rs
www/css/: style.css
