[package]
name = "tiny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinymod = { path = "../tinymod" }

chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
sha3 = "0.10"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
bincode = "1.3"
